database connections are done

--- a/.env
+++ b/.env
@@ -1,1 +1,13 @@
 PORT = 8080
+
+
+postgresql://neondb_owner:npg_zTFVULur7jW4@ep-late-pond-a8pyhu97-pooler.eastus2.azure.neon.tech/neondb?sslmode=require
+
+
+PGUSER='neondb_owner'
+PGPASSWORD='npg_zTFVULur7jW4'
+PGHOST='ep-late-pond-a8pyhu97-pooler.eastus2.azure.neon.tech'
+PGDATABASE='neondb'
+
+ARCJET_KEY=ajkey_01jnaw6kk2e4qtxk90e9aenzrj
+ARCJET_ENV=development
